--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.row{
+  max-width: 1200px;
+  margin: auto;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.col-1-2{
+  width: calc(100% / 2);
+}
+.col-1-3{
+  width: calc(100% / 3);
+}
+.col-1-4{
+  width: calc(100% / 4);
+}
+.col-1-5{
+  width: calc(100% / 5);
+}
+.col-1-6{
+  width: calc(100% / 6);
+}
+.col-1-9{
+  width: calc(100% / 1.5);
+}
+*{
+  margin: 0;
+  padding: 0;
 }
